# TinyRenderer

./: .gitignore  CMakeLists.txt  output.tga
docs/: 01直线绘制.md  02三角形光栅化.md  03Z缓冲.md  0开始.md
docs/wiki/: 1直线绘制.md  2三角形光栅化.md  3Z缓冲.md
include/: Line.h  model.h  tgaimage.h
lib/glm/: ALL_BUILD.vcxproj  glm.sln
lib/glm/glm/: glm.vcxproj  glm.vcxproj.filters
myTinyRenderer/docs/: lesson0.md  lesson1.md
myTinyRenderer/lesson1/: CMakeLists.txt  output.tga
myTinyRenderer/lesson1/src/: Line.h  main.cpp
src/: Line.cpp  main.cpp  model.cpp  tgaimage.cpp
